--add-exports with jdk.compiler modules removed (nu doesn't provide images with full jdk)